[package]
name = "llama_inference"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
llm = { git = "https://github.com/rustformers/llm.git", brach = "main" }
serde = { version = "1.0", features = ["derive"] }
simple_logger = "1.11"
rand = "0.8"
toml = "0.5"
log = "0.4"

rustyline = { version = "11.0.0", features = ["derive"] }
clap = { version = "4.1.8", features = ["derive"] }